Fixed margin bug causing extra horizontal scroll

--- a/src/components/MenuItem.css
+++ b/src/components/MenuItem.css
@@ -46,3 +46,7 @@
         }
     }
 }
+
+.row {
+    margin-right: 0 !important;
+}
